# cortex-m-quickstart

./: .gitignore  Cargo.toml  README.md  devices.yml  memory.x.mustache  openocd.cfg  requirements.txt  tasks.py
.cargo/: config
examples/: blink.rs
