[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "cortex-m-quickstart"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f401"]
version = "0.2.4"

# this lets you use `cargo fix`!
[[bin]]
name = "cortex-m-quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
